--- a/front/src/app/components/header/header.component.css
+++ b/front/src/app/components/header/header.component.css
@@ -20,7 +20,7 @@
 }
 
 .header-nav .nav-link:hover {
-    color: #007bff;
+    color: #FF6B81;
 }
 
 .header-nav .spacer {
@@ -37,7 +37,7 @@
 }
 
 .header-nav .btn-logout:hover {
-    color: #007bff;
+    color: #FF6B81;
 }
 
 /* Push page content below fixed header */
